[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Rudolph Lorenz <rudlorenz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusttracer"
path = "src/lib.rs"

[[bin]]
name = "rusttracer-bin"
path = "src/main.rs"

[dependencies]
overload = "0.1.1"
image = "0.23.12"
rand = "0.7.3"
rayon = "1.5.0"
num = "0.3.1"